--- a/scooters/scooters.vcxproj
+++ b/scooters/scooters.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -128,12 +129,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="generator.cpp" />
+    <ClCompile Include="output.cpp" />
     <ClCompile Include="parser.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="scooters.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="generator.h" />
+    <ClInclude Include="output.h" />
     <ClInclude Include="parser.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="structures.h" />
